--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Matti Hicks
 email: mattihixx@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Portfolio for Matti Hicks, product designer based in Zurich, Switzerland
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/mattihicks" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: mattihicks
 github_username:  mattihicks
