--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Matti Hicks - Designer based in Zurich
 email: mattihixx@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Portfolio for Matti Hicks, product designer based in Zurich, Switzerland
+  Portfolio for Matti Hicks, UX Designer based in Zurich, Switzerland
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: mattihicks
